Mon Sep 29 18:04:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/CDR_File_Test.cpp:
        * tests/Log_Msg_Test.cpp:
          VxWorks 6.6 can't unlink in advance on NFS

Mon Sep 29 13:36:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/acedefaults.mpb:
        * tests/unload_libace.mpb:
          Use unicode lib modifier

Sun Sep 28 18:16:53 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3432_Regression_Test.cpp:
        * tests/OS_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Moved strptime test to its own file because ACE_OS::strptime() seems to
          behave differently on HPUX and no time to sort that out at this moment

        * tests/Pipe_Test.cpp:
          Renamed a few methods so that we don't have to disable the ACE_OS check

Sun Sep 28 10:28:53 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_rel_manpages:
          We are using doxygen 1.5.6 from now

Thu Sep 25 18:27:53 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Remove ACE_LACKS_STRPTIME and ACE_LACKS_SI_ADDR autoheader
          templates.  We already use the AC_DEFINE macros third argument
          for the descriptive text in the cooresponding feature tests.

Thu Sep 25 17:37:19 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Add comment explaining why I'm bothering replacing autoheader
          templates in this file.

        * m4/acinclude.m4:
        * m4/config_h.m4:

          Move ACE_HAS_LLSEEK, ACE_HAS_LSEEK64,
          ACE_LACKS_LLSEEK_PROTOTYPE, and ACE_LACKS_LSEEK64_PROTOTYPE
          autoheader templates to ACE_CHECK_LSEEK64 feature test macro.

        * configure.ac:
        * m4/config_h.m4:

          Replace use of autoheader templates with AC_DEFINE macro's third
          argument for ACE_LACKS_CONDATTR_PSHARED,