@@ -391,10 +391,13 @@ ACE_END_VERSIONED_NAMESPACE_DECL
 #   endif /* __BYTE_ORDER */
 # else /* ! BYTE_ORDER && ! __BYTE_ORDER */
   // We weren't explicitly told, so we have to figure it out . . .
+  // Note that Itanium hardware (IA64) can run in either byte order. It's
+  // selected by the OS when loading; Windows runs little, HP-UX runs big.
 #   if defined (i386) || defined (__i386__) || defined (_M_IX86) || \
      defined (vax) || defined (__alpha) || defined (__LITTLE_ENDIAN__) || \
-     defined (ARM) || defined (_M_IA64) || defined (__ia64__) || \
-     defined (_M_AMD64) || defined (__amd64)
+     defined (ARM) || defined (_M_IA64) || defined (_M_AMD64) || \
+     defined (__amd64) || \
+     ((defined (__ia64__) || defined (__ia64)) && !defined (__hpux))
     // We know these are little endian.
 #     define ACE_LITTLE_ENDIAN 0x0123
 #     define ACE_BYTE_ORDER ACE_LITTLE_ENDIAN
